# maestro

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  tag-release.yml
config/: default.toml
docs/: PLAN.md  README.md  architecture.md  commands.md  configuration.md  contributing.md  deployment.md  getting-started.md  keybindings.md  theming.md
docs/features/: 00-dependency-compatibility.md  01-project-scaffold.md  02-configuration-system.md  03-core-types-event-system.md  04-pty-management.md  05-agent-state-machine.md  06-agent-lifecycle-management.md  07-input-handling.md  08-theme-layout-system.md  09-sidebar-widget.md  10-terminal-pane.md  11-status-bar.md  12-app-bootstrap-main-loop.md  13-split-grid-views.md  14-command-palette.md  15-scrollback-search.md  16-mouse-support.md  17-desktop-notifications.md  18-session-persistence.md  19-workspace-profiles-templates.md  20-output-export-stream-json.md
examples/: keytest.rs
homebrew/: maestro.rb
src/: app.rs  clipboard.rs  export.rs  lib.rs  main.rs  notification.rs
src/agent/: detector.rs  handle.rs  manager.rs  mod.rs  restart.rs  scrollback.rs  state.rs  stream_json.rs
src/config/: loader.rs  mod.rs  profile.rs  settings.rs
src/event/: bus.rs  mod.rs  types.rs
src/input/: action.rs  handler.rs  mod.rs  mode.rs
src/project/: config.rs  mod.rs
src/pty/: controller.rs  mod.rs  spawner.rs
src/session/: mod.rs
src/ui/: command_palette.rs  layout.rs  mod.rs  pane_manager.rs  sidebar.rs  spawn_picker.rs  status_bar.rs  terminal_pane.rs  theme.rs
