[package]
name = "maestro"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "TUI agent dashboard for Claude Code"
license = "MIT"
authors = ["MarcelSauter"]
repository = "https://github.com/initia-group/maestro"
homepage = "https://github.com/initia-group/maestro"
readme = "README.md"
keywords = ["tui", "claude", "agent", "terminal", "dashboard"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["docs/", "examples/", ".github/", "config/"]

[dependencies]
# TUI — Option B (compatible versions per Feature 00)
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tui-term = { version = "0.3", features = ["vt100"] }
vt100 = "0.16"

# PTY
portable-pty = "0.9"
libc = "0.2"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Config & Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

# CLI & Error Handling
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utility
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
fuzzy-matcher = "0.3"
notify-rust = "4"
arboard = "3"

[dev-dependencies]
insta = "1"
tempfile = "3"
